[SRSDriver] - Fix scan bar code

--- a/SRSDriver/App/OrderDetails/OrderScanItemTableViewCell.xib
+++ b/SRSDriver/App/OrderDetails/OrderScanItemTableViewCell.xib
@@ -22,7 +22,7 @@
                         <rect key="frame" x="16" y="10" width="349" height="110"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="w2G-Lq-0Jv">
-                                <rect key="frame" x="0.0" y="0.0" width="185" height="20.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="174.5" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Package:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VpH-gO-icg">
                                         <rect key="frame" x="0.0" y="0.0" width="69" height="20.5"/>
@@ -34,21 +34,21 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3a-tz-qxH">
-                                        <rect key="frame" x="77" y="0.0" width="45" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="77" y="0.0" width="40.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                         <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="121343" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gca-hJ-KGD">
-                                        <rect key="frame" x="130" y="0.0" width="55" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                        <rect key="frame" x="125.5" y="0.0" width="49" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                         <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wNy-UR-qkf">
-                                <rect key="frame" x="0.0" y="28.5" width="49" height="24.5"/>
+                                <rect key="frame" x="0.0" y="28.5" width="48.5" height="24.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Qty:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="36Q-rM-k0Q">
                                         <rect key="frame" x="0.0" y="0.0" width="31.5" height="24.5"/>
@@ -60,15 +60,15 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRt-Dm-RIB">
-                                        <rect key="frame" x="39.5" y="0.0" width="9.5" height="24.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <rect key="frame" x="39.5" y="0.0" width="9" height="24.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                         <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jvE-mE-lAi">
-                                <rect key="frame" x="0.0" y="61" width="106.5" height="20.5"/>
+                                <rect key="frame" x="0.0" y="61" width="349" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desc:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uo0-uq-Uic">
                                         <rect key="frame" x="0.0" y="0.0" width="46" height="20.5"/>
@@ -83,7 +83,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="121343" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5FR-iF-hau">
-                                        <rect key="frame" x="54" y="0.0" width="52.5" height="20.5"/>
+                                        <rect key="frame" x="54" y="0.0" width="295" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                         <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -113,6 +113,8 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="jvE-mE-lAi" firstAttribute="top" secondItem="vpP-6s-x5E" secondAttribute="top" constant="61" id="Joe-B9-hn8"/>
+                            <constraint firstAttribute="trailing" secondItem="jvE-mE-lAi" secondAttribute="trailing" id="sgy-wt-gQJ"/>
+                            <constraint firstItem="jvE-mE-lAi" firstAttribute="leading" secondItem="vpP-6s-x5E" secondAttribute="leading" id="uA9-1A-14e"/>
                         </constraints>
                     </stackView>
                 </subviews>
