--- a/SRSDriver/App/OrderDetails/OrderScanItemTableViewCell.xib
+++ b/SRSDriver/App/OrderDetails/OrderScanItemTableViewCell.xib
@@ -11,21 +11,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OrderScanItemTableViewCell" rowHeight="144" id="TOx-D2-kwI" customClass="OrderScanItemTableViewCell" customModule="DMSDriver" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="144"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OrderScanItemTableViewCell" rowHeight="118" id="TOx-D2-kwI" customClass="OrderScanItemTableViewCell" customModule="DMSDriver" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="118"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TOx-D2-kwI" id="7JH-ys-PQ2">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="143.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="117.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="vpP-6s-x5E">
                         <rect key="frame" x="30" y="10" width="335" height="102"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="w2G-Lq-0Jv">
-                                <rect key="frame" x="0.0" y="0.0" width="155.5" height="19.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="236.5" height="19.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Package:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VpH-gO-icg">
-                                        <rect key="frame" x="0.0" y="0.0" width="53" height="19.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cooler:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VpH-gO-icg">
+                                        <rect key="frame" x="0.0" y="0.0" width="43" height="19.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="12"/>
                                         <color key="textColor" red="0.49803921568627452" green="0.49803921568627452" blue="0.49803921568627452" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -34,13 +34,25 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3a-tz-qxH">
-                                        <rect key="frame" x="61" y="0.0" width="37.5" height="19.5"/>
+                                        <rect key="frame" x="51" y="0.0" width="37.5" height="19.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="waH-9j-QiO">
+                                        <rect key="frame" x="96.5" y="0.0" width="37.5" height="19.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XfT-hw-pz1">
+                                        <rect key="frame" x="142" y="0.0" width="37.5" height="19.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="121343" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gca-hJ-KGD">
-                                        <rect key="frame" x="106.5" y="0.0" width="49" height="19.5"/>
+                                        <rect key="frame" x="187.5" y="0.0" width="49" height="19.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -118,12 +130,15 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="barcodeLabel" destination="kbh-vA-nnJ" id="unm-za-tE1"/>
+                <outlet property="beaconId" destination="XfT-hw-pz1" id="lFU-8g-3Uu"/>
+                <outlet property="coolerName" destination="waH-9j-QiO" id="mse-Ry-KvJ"/>
                 <outlet property="descriptionLabel" destination="5FR-iF-hau" id="pr8-K0-s3j"/>
+                <outlet property="qtyStackView" destination="wNy-UR-qkf" id="aZ2-At-BPO"/>
                 <outlet property="quantityLabel" destination="GRt-Dm-RIB" id="qCT-Md-6ux"/>
                 <outlet property="skuLabel" destination="p3a-tz-qxH" id="YqQ-lL-BhF"/>
                 <outlet property="statusLabel" destination="gca-hJ-KGD" id="qMv-If-Eed"/>
             </connections>
-            <point key="canvasLocation" x="-34" y="33"/>
+            <point key="canvasLocation" x="-67" y="-41"/>
         </tableViewCell>
     </objects>
 </document>
