[DMS][Core] - update trước khi phân nhánh.

--- a/SRSDriver/Base.lproj/Main.storyboard
+++ b/SRSDriver/Base.lproj/Main.storyboard
@@ -621,7 +621,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="barcodeLabel" destination="Q4N-cb-KDq" id="WXi-vx-F3L"/>
-                                            <outlet property="skuLabel" destination="c7a-IW-hX5" id="APk-S1-2UV"/>
+                                            <outlet property="nameLabel" destination="c7a-IW-hX5" id="Jl2-wN-aw2"/>
                                             <outlet property="totalLabel" destination="jAy-ZM-r0i" id="QyB-AS-eut"/>
                                         </connections>
                                     </tableViewCell>
