--- a/SRSDriver/App/OrderDetails/OrderScanItemTableViewCell.xib
+++ b/SRSDriver/App/OrderDetails/OrderScanItemTableViewCell.xib
@@ -22,7 +22,7 @@
                         <rect key="frame" x="30" y="10" width="335" height="102"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="w2G-Lq-0Jv">
-                                <rect key="frame" x="0.0" y="0.0" width="236.5" height="19.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="241.5" height="19.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cooler:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VpH-gO-icg">
                                         <rect key="frame" x="0.0" y="0.0" width="43" height="19.5"/>
@@ -39,20 +39,20 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="waH-9j-QiO">
-                                        <rect key="frame" x="96.5" y="0.0" width="37.5" height="19.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bbbbb" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="waH-9j-QiO">
+                                        <rect key="frame" x="96.5" y="0.0" width="45" height="19.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="aaaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XfT-hw-pz1">
-                                        <rect key="frame" x="142" y="0.0" width="37.5" height="19.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ccccc" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XfT-hw-pz1">
+                                        <rect key="frame" x="149.5" y="0.0" width="35" height="19.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="121343" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gca-hJ-KGD">
-                                        <rect key="frame" x="187.5" y="0.0" width="49" height="19.5"/>
+                                        <rect key="frame" x="192.5" y="0.0" width="49" height="19.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -138,7 +138,7 @@
                 <outlet property="skuLabel" destination="p3a-tz-qxH" id="YqQ-lL-BhF"/>
                 <outlet property="statusLabel" destination="gca-hJ-KGD" id="qMv-If-Eed"/>
             </connections>
-            <point key="canvasLocation" x="-67" y="-41"/>
+            <point key="canvasLocation" x="-204" y="-168"/>
         </tableViewCell>
     </objects>
 </document>
