--- a/SRSDriver/Resources/Storyboards/Route.storyboard
+++ b/SRSDriver/Resources/Storyboards/Route.storyboard
@@ -33,18 +33,28 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="70.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocU-yS-FVE">
-                                                            <rect key="frame" x="15" y="5" width="345" height="60.5"/>
+                                                            <rect key="frame" x="15" y="5" width="35.5" height="60.5"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                                                             <color key="textColor" red="0.0" green="0.61568627450000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cor-Z5-pSn">
+                                                            <rect key="frame" x="315" y="20" width="45" height="30"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="5tV-sr-TFr"/>
+                                                            </constraints>
+                                                            <state key="normal" title="New"/>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                     <constraints>
+                                                        <constraint firstItem="Cor-Z5-pSn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ocU-yS-FVE" secondAttribute="trailing" constant="5" id="1Ej-eV-8f9"/>
                                                         <constraint firstItem="ocU-yS-FVE" firstAttribute="top" secondItem="JRs-Di-fTr" secondAttribute="top" constant="5" id="8Re-tW-tTB"/>
                                                         <constraint firstAttribute="bottom" secondItem="ocU-yS-FVE" secondAttribute="bottom" constant="5" id="EBS-C5-WMx"/>
                                                         <constraint firstItem="ocU-yS-FVE" firstAttribute="leading" secondItem="JRs-Di-fTr" secondAttribute="leading" constant="15" id="FGY-wH-C0R"/>
-                                                        <constraint firstAttribute="trailing" secondItem="ocU-yS-FVE" secondAttribute="trailing" constant="15" id="U1L-Vz-PP8"/>
+                                                        <constraint firstItem="Cor-Z5-pSn" firstAttribute="centerY" secondItem="ocU-yS-FVE" secondAttribute="centerY" id="Oai-vM-nXv"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Cor-Z5-pSn" secondAttribute="trailing" constant="15" id="hfL-yJ-rqQ"/>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="pMH-R0-dHm"/>
                                                     </constraints>
                                                 </view>
@@ -57,6 +67,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="btnStatus" destination="Cor-Z5-pSn" id="SQP-LQ-yaY"/>
                                             <outlet property="lblTitle" destination="ocU-yS-FVE" id="zlH-hF-jGH"/>
                                         </connections>
                                     </tableViewCell>
@@ -148,7 +159,7 @@
                                 </constraints>
                             </view>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Have no routes" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpg-qv-SkC">
-                                <rect key="frame" x="137" y="334.5" width="102" height="18"/>
+                                <rect key="frame" x="136.5" y="334.5" width="102" height="18"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                 <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
