[99Cents] - update UI for OrderDetail Screen

--- a/SRSDriver/Resources/Storyboards/Order.storyboard
+++ b/SRSDriver/Resources/Storyboards/Order.storyboard
@@ -212,7 +212,6 @@
                     <connections>
                         <outlet property="noOrdersLabel" destination="oPo-gn-VPd" id="4pW-xQ-Cfx"/>
                         <outlet property="tableView" destination="Bdk-MM-huX" id="dRE-Ix-hW4"/>
-                        <segue destination="eLg-1Y-uPw" kind="show" identifier="orderDetailSegue" id="ZhS-Gd-DJE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2HK-8e-J4O" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -281,7 +280,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eVV-2Y-Lag" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2244" y="-143"/>
+            <point key="canvasLocation" x="2103" y="-143"/>
         </scene>
         <!--Order Detail View Controller-->
         <scene sceneID="sfJ-Ia-S7a">
@@ -329,6 +328,9 @@
                                                     <real key="value" value="5"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="didClickUnableToStart:" destination="Vm6-pM-Lic" eventType="touchUpInside" id="xq8-G6-FWG"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
@@ -529,7 +531,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nmd-vq-TD7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3101.5999999999999" y="-158.77061469265368"/>
+            <point key="canvasLocation" x="2879" y="-150"/>
         </scene>
         <!--Reason List View Controller-->
         <scene sceneID="5wE-Rd-hNH">
@@ -603,7 +605,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gyd-Xo-C8g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3921" y="300"/>
+            <point key="canvasLocation" x="3774" y="301"/>
         </scene>
         <!--Order Detail Map View Controller-->
         <scene sceneID="H9N-9m-JN6">
@@ -699,7 +701,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MFL-QQ-6eD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4573.6000000000004" y="-910.79460269865069"/>
+            <point key="canvasLocation" x="3713" y="-775"/>
         </scene>
         <!--Scan Bar Code View Controller-->
         <scene sceneID="nFV-ZI-nS4">
@@ -810,20 +812,20 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E9I-BD-aqR">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dry-mV-Zbd">
                                 <rect key="frame" x="20" y="40" width="335" height="557"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="E9I-BD-aqR" firstAttribute="trailing" secondItem="kTo-3J-74r" secondAttribute="trailing" id="46u-4m-Na0"/>
+                            <constraint firstItem="Dry-mV-Zbd" firstAttribute="top" secondItem="kTo-3J-74r" secondAttribute="top" id="7lg-V1-wda"/>
                             <constraint firstItem="QGf-2J-tgu" firstAttribute="top" secondItem="kTo-3J-74r" secondAttribute="bottom" constant="20" id="ATu-u6-W7p"/>
-                            <constraint firstItem="E9I-BD-aqR" firstAttribute="bottom" secondItem="kTo-3J-74r" secondAttribute="bottom" id="HTE-fz-E4J"/>
-                            <constraint firstItem="E9I-BD-aqR" firstAttribute="leading" secondItem="kTo-3J-74r" secondAttribute="leading" id="UOv-bB-y6w"/>
+                            <constraint firstItem="Dry-mV-Zbd" firstAttribute="bottom" secondItem="kTo-3J-74r" secondAttribute="bottom" id="J8V-Bc-bbe"/>
                             <constraint firstItem="QGf-2J-tgu" firstAttribute="leading" secondItem="Ilb-vb-1Od" secondAttribute="leading" constant="10" id="Xpy-iS-QPm"/>
                             <constraint firstItem="Ilb-vb-1Od" firstAttribute="bottom" secondItem="QGf-2J-tgu" secondAttribute="bottom" constant="10" id="a0B-3r-ND8"/>
+                            <constraint firstItem="Dry-mV-Zbd" firstAttribute="trailing" secondItem="kTo-3J-74r" secondAttribute="trailing" id="cWd-vu-Idd"/>
                             <constraint firstItem="kTo-3J-74r" firstAttribute="leading" secondItem="Ilb-vb-1Od" secondAttribute="leading" constant="20" id="dNi-hw-GTv"/>
-                            <constraint firstItem="E9I-BD-aqR" firstAttribute="top" secondItem="kTo-3J-74r" secondAttribute="top" id="l2G-Mm-8Fy"/>
+                            <constraint firstItem="Dry-mV-Zbd" firstAttribute="leading" secondItem="kTo-3J-74r" secondAttribute="leading" id="lCk-Xe-CTE"/>
                             <constraint firstItem="Ilb-vb-1Od" firstAttribute="trailing" secondItem="kTo-3J-74r" secondAttribute="trailing" constant="20" id="snP-fL-Hrv"/>
                             <constraint firstItem="Ilb-vb-1Od" firstAttribute="trailing" secondItem="QGf-2J-tgu" secondAttribute="trailing" constant="10" id="vk0-gn-9fZ"/>
                             <constraint firstItem="kTo-3J-74r" firstAttribute="top" secondItem="Ilb-vb-1Od" secondAttribute="top" constant="20" id="w3j-A4-IKm"/>
@@ -833,14 +835,14 @@
                     <connections>
                         <outlet property="controlsContainerView" destination="QGf-2J-tgu" id="NhT-Oj-v0S"/>
                         <outlet property="finishButton" destination="EFg-an-mdi" id="6vM-0H-FBY"/>
-                        <outlet property="signatureImgView" destination="E9I-BD-aqR" id="WFb-xc-10L"/>
+                        <outlet property="signatureImgView" destination="Dry-mV-Zbd" id="QZd-1y-tx0"/>
                         <outlet property="signatureView" destination="kTo-3J-74r" id="o9F-M7-2IE"/>
                         <outlet property="unableToFinishButton" destination="5aU-te-EHH" id="8wH-dc-ko8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="557-kM-yAc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4685.6000000000004" y="-188.45577211394306"/>
+            <point key="canvasLocation" x="4486" y="-206"/>
         </scene>
         <!--Order Notes View Controller-->
         <scene sceneID="QKY-Sa-X2d">
